--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,14 +1,27 @@
 {
     "buttonDismiss": "schließen",
     "buttonNotAgain": "nicht wieder anzeigen",
+    "button_closeModal": "Abbrechen",
+    "button_getUser": "Neuen Benutzer abrufen",
     "connectionInformation": "Verbindungsinformationen für Ihre Hue-Bridge",
     "connectionTitle": "Verbindungseinstellungen für die Hue Bridge",
+    "donateInformation": "Neue Funktionen / Features können gerne über Github oder das ioBroker Forum angefragt werden. Wenn dieser Adapter gefällt / nützlich ist, sind Spenden herzlich Willkommen.",
+    "donateTitle": "Unterstützung der Entwicklung des hue-extended Adapters!",
+    "getUserInfo": "Zunächst den Button an der Hue Bridge drücken! Danach mit dem Button -Neuen Benutzer abrufen- fortfahren.",
+    "hueToXY": "Verwenden von <pre>XY</pre> anstelle von <pre>hue</pre> (nur für nicht-Philips-Geräte)",
+    "hueToXYInfo": "Die Einstellung des <pre>hue</pre> Wertes kann trotz erfolgreich abgeschickten Befehl bei nicht-Philips-Geräte fehlschlagen. Mit dieser Option sendet der Adapter das Kommando immer als <pre>XY</pre> statt als <pre>hue</pre> Befehl (nur für nicht-Philips-Geräte).",
     "ip": "Bridge IP",
+    "message_connected": "Verbunden zum Adapter. Lade Token..",
+    "message_connecting": "Verbinde zum Adapter..",
+    "message_error-user": "Benutzer konnte nicht abgerufen werden!",
+    "message_noconnection": "Keine Verbindung zum Adapter! Bitte zunächst den Adapter starten.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
     "nameInfo": "Geräte-Namen im Objekt-Baum (anstelle der ID) verwenden",
     "other": "Weitere Einstellungen",
     "port": "Bridge Port",
+    "queue": "Queue-Verarbeitung (in Sekunden)",
+    "queueInfo": "Zeit für die Verarbeitung der Befehle in der Warteschlange (in Sekunden). Befehle werden in die Warteschlange gestellt und gemeinsam verarbeitet. Dies ermöglicht das Anwenden mehrerer Befehle gleichzeitig (und nicht nacheinander) auf Ihren Geräten.",
     "refresh": "Aktualisierung (in Sekunden)",
     "refreshInfo": "Intervall zur Aktualisierung aller Einstellungen / Daten (in Sekunden). Wenn auf 0 gesetzt werden die Einstellungen nur beim Adapter-Start aktualisiert.",
     "syncConfig": "Synchronisation der Konfiguration",
@@ -22,6 +35,7 @@
     "syncSensors": "Synchronisation der Sensoren",
     "tab_alexa": "Alexa Integration",
     "tab_config": "Konfiguration",
+    "tab_donate": "Spenden",
     "tab_info": "Informationen",
     "useNames": "Geräte-Namen verwenden",
     "user": "Bridge Benutzer"
