--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -1,14 +1,27 @@
 {
     "buttonDismiss": "Descartar",
     "buttonNotAgain": "No volver a mostrar",
+    "button_closeModal": "Cancelar",
+    "button_getUser": "Obtener nuevo usuario",
     "connectionInformation": "Proporcionar información de conexión para el Puente Hue",
     "connectionTitle": "Ajustes de conexión para el Puente Hue",
+    "donateInformation": "Siéntase libre de sugerir nuevas características a través de Github o ioBroker foro. Si te gusta este adaptador, usted muy bienvenido a donar.",
+    "donateTitle": "Apoyar el desarrollo de los hue-extendida Adaptador!",
+    "getUserInfo": "Pulse el botón en su Tono Puente de primero! Después, presione el botón -Obtener nueva por el usuario.",
+    "hueToXY": "Uso XY en lugar de tono (sólo por la falta de dispositivos Philips)",
+    "hueToXYInfo": "Cuando ajuste el matiz de estado, no de Philips dispositivos pueden fallar para este proceso a pesar de que el comando se ha aplicado con éxito. Con esta opción, el adaptador de enviar siempre el matiz estado como xy comando para no dispositivos Philips.",
     "ip": "Puente IP",
+    "message_connected": "Conectado al adaptador. La recuperación de usuario..",
+    "message_connecting": "Conexión a un adaptador..",
+    "message_error-user": "Podría no obtener el usuario de Puente!",
+    "message_noconnection": "No hay conexión con el adaptador! Por favor, inicie adaptador primero.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
     "nameInfo": "El uso de un Nombre de Dispositivo en el árbol de Objetos (en lugar de ID)",
     "other": "Otros Ajustes",
     "port": "Puente Del Puerto",
+    "queue": "La cola de procesamiento (en segundos)",
+    "queueInfo": "Tiempo para el procesamiento de los comandos en la cola. Los comandos están en la cola y se procesan de forma conjunta. Esto permite aplicar la fuerza serval comandos a la vez (y no uno por uno) en sus dispositivos.",
     "refresh": "Actualización (en segundos)",
     "refreshInfo": "Tiempo para la actualización de todos los ajustes / información (en segundos). Si se establece en 0, la configuración sólo se actualiza en el inicio.",
     "syncConfig": "Sincronizar Config",
@@ -22,6 +35,7 @@
     "syncSensors": "Sincronizar Los Sensores",
     "tab_alexa": "Alexa integración",
     "tab_config": "Configuración",
+    "tab_donate": "Donación",
     "tab_info": "Información",
     "useNames": "El Uso De Un Nombre De Dispositivo",
     "user": "Puente De Usuario"
