--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -1,14 +1,27 @@
 {
     "buttonDismiss": "Rejeter",
     "buttonNotAgain": "Ne pas afficher de nouveau",
+    "button_closeModal": "Annuler",
+    "button_getUser": "Obtenir de nouveaux utilisateurs",
     "connectionInformation": "Fournir les informations de connexion pour votre Teinte Pont",
     "connectionTitle": "Paramètres de connexion pour la Teinte Pont",
+    "donateInformation": "N'hésitez pas à suggérer de nouvelles fonctionnalités via Github ou ioBroker forum. Si vous aimez cet adaptateur, vous les bienvenus pour faire un don.",
+    "donateTitle": "Soutenir le développement de la teinte-extension de Carte!",
+    "getUserInfo": "Appuyez sur le bouton de votre Teinte Pont la première! Ensuite, appuyez sur le bouton Obtenir de nouvelles de l'utilisateur.",
+    "hueToXY": "Utilisez XY au lieu de la teinte (uniquement pour les non-appareils Philips)",
+    "hueToXYInfo": "Lors du réglage de la teinte de l'état, non-Philips appareils risquent de ne pas traiter ce même si la commande a été appliquée avec succès. Avec cette option, la carte envoie toujours la teinte de l'état comme xy commande pour les non-appareils Philips.",
     "ip": "Pont de la propriété intellectuelle",
+    "message_connected": "Connecté à l'adaptateur. La récupération de l'utilisateur..",
+    "message_connecting": "La connexion à la carte..",
+    "message_error-user": "Ne pouvait pas aller chercher de l'utilisateur à partir de la passerelle!",
+    "message_noconnection": "Pas de connexion à la carte! S'il vous plaît commencer adaptateur.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
     "nameInfo": "Utilisation Nom de l'Appareil dans l'arborescence des Objets (au lieu de l'ID)",
     "other": "D'Autres Paramètres",
     "port": "Port De Pont",
+    "queue": "File d'attente de traitement (en secondes)",
+    "queueInfo": "Le temps de traitement des commandes dans la file d'attente. Les commandes sont en attente et traitées ensemble. Cela permet d'appliquer serval commandes à la fois (et non pas un par un) sur vos appareils.",
     "refresh": "D'actualisation (en secondes)",
     "refreshInfo": "Temps à l'actualisation de tous les paramètres / l'information (en secondes). Si la valeur est 0, les paramètres ne seront actualisées lors du démarrage.",
     "syncConfig": "Synchroniser Config",
@@ -22,6 +35,7 @@
     "syncSensors": "Synchroniser Des Capteurs",
     "tab_alexa": "Alexa intégration",
     "tab_config": "Configuration",
+    "tab_donate": "Don",
     "tab_info": "Informations",
     "useNames": "Utilisation Nom De L'Appareil",
     "user": "Pont De L'Utilisateur"
