--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -1,14 +1,27 @@
 {
     "buttonDismiss": "Chiudere",
     "buttonNotAgain": "Non mostrare più",
+    "button_closeModal": "Annulla",
+    "button_getUser": "Ottenere nuovo utente",
     "connectionInformation": "Fornire le informazioni di connessione per il Bridge Hue",
     "connectionTitle": "Impostazioni di connessione per Tonalità Ponte",
+    "donateInformation": "Sentitevi liberi di suggerire nuove funzionalità tramite Github o ioBroker forum. Se ti piace questo adattatore, è molto benvenuto a donare.",
+    "donateTitle": "Sostenere lo sviluppo della tonalità esteso Adattatore!",
+    "getUserInfo": "Premere il pulsante sulla Tonalità del Ponte di prima! Successivamente, premere il pulsante di Ottenere un nuovo utente.",
+    "hueToXY": "XY invece di tonalità (solo per i non-dispositivi Philips)",
+    "hueToXYInfo": "Quando si imposta la tonalità di stato, camere non-dispositivi Philips potrebbe non riuscire a processo anche se il comando è stato applicato con successo. Con questa opzione, la scheda di inviare sempre la tonalità di stato xy comando non-dispositivi Philips.",
     "ip": "Ponte IP",
+    "message_connected": "Collegato all'adattatore. Il recupero di utente..",
+    "message_connecting": "Collegamento alla scheda..",
+    "message_error-user": "Non è riuscito a recuperare utente dal Ponte!",
+    "message_noconnection": "Nessun collegamento alla scheda! Si prega di avviare prima l'adattatore.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
     "nameInfo": "Utilizzare il Nome del Dispositivo in Oggetto albero (invece di ID)",
     "other": "Altre Impostazioni",
     "port": "Ponte Di Porta",
+    "queue": "La coda di elaborazione (in secondi)",
+    "queueInfo": "Il tempo per l'elaborazione dei comandi in coda. I comandi sono in coda e trattati insieme. Questo permette di applicare serval comandi in una sola volta (e non uno) sui vostri dispositivi.",
     "refresh": "Aggiornamento (in secondi)",
     "refreshInfo": "Tempo per l'aggiornamento di tutte le impostazioni / informazioni (in secondi). Se impostato a 0, le impostazioni vengono solo aggiornati all'avvio.",
     "syncConfig": "Sincronizzare Config",
@@ -22,6 +35,7 @@
     "syncSensors": "Sincronizzare I Sensori",
     "tab_alexa": "Alexa integrazione",
     "tab_config": "Configurazione",
+    "tab_donate": "Donazione",
     "tab_info": "Informazioni",
     "useNames": "Utilizzare Il Nome Del Dispositivo",
     "user": "Ponte Utente"
