--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -1,14 +1,27 @@
 {
     "buttonDismiss": "Sluiten",
     "buttonNotAgain": "Don ' t show again",
+    "button_closeModal": "Annuleren",
+    "button_getUser": "Nieuwe gebruiker",
     "connectionInformation": "Maak de verbinding informatie voor uw Hue Bridge",
     "connectionTitle": "Verbindingsinstellingen voor Hue Bridge",
+    "donateInformation": "Voel je vrij om te suggereren nieuwe functies via Github of ioBroker forum. Als je van deze adapter, die je erg welkom om te doneren.",
+    "donateTitle": "Ondersteuning van de ontwikkeling van de hue-extended Adapter!",
+    "getUserInfo": "Druk op de knop op uw Hue Bridge eerste! Druk vervolgens op de knop nieuwe gebruiker.",
+    "hueToXY": "Gebruik XY in plaats van tint (alleen voor niet-Philips-apparaten)",
+    "hueToXYInfo": "Bij het instellen van de tint van state, niet-Philips-apparaten kunnen niet verwerkt, hoewel de opdracht met succes is toegepast. Met deze optie worden de adapter zal altijd stuur de tint staat als xy opdracht om niet-Philips-apparaten.",
     "ip": "Brug IP",
+    "message_connected": "Aangesloten op adapter. Het ophalen van de gebruiker..",
+    "message_connecting": "Aansluiten op adapter..",
+    "message_error-user": "Kon het niet halen van de gebruiker van de Brug!",
+    "message_noconnection": "Geen verbinding met adapter! Start de adapter eerste.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
     "nameInfo": "Gebruik de Naam van het Apparaat in het objectscherm (in plaats van ID)",
     "other": "Andere Instellingen",
     "port": "Brug-Poort",
+    "queue": "Rij te verwerken (in seconden)",
+    "queueInfo": "Tijd voor de verwerking van opdrachten in de wachtrij. Opdrachten in een wachtrij worden geplaatst en verwerkt samen. Dit kunt toepassen serval commando ' s in een keer (en niet één-op-één) toe aan uw apparatuur.",
     "refresh": "Vernieuwen (in seconden)",
     "refreshInfo": "Tijd voor het vernieuwen van alle instellingen / informatie (in seconden). Indien ingesteld op 0, instellingen zal alleen worden vernieuwd bij het opstarten.",
     "syncConfig": "Synchroniseren Config",
@@ -22,6 +35,7 @@
     "syncSensors": "Synchroniseren Sensoren",
     "tab_alexa": "Alexa integratie",
     "tab_config": "Configuratie",
+    "tab_donate": "Donatie",
     "tab_info": "Informatie",
     "useNames": "Gebruik De Naam Van Het Apparaat",
     "user": "Brug Gebruiker"
