--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -1,14 +1,27 @@
 {
     "buttonDismiss": "Zwolnić",
     "buttonNotAgain": "Nie pokazuj więcej ",
+    "button_closeModal": "Anuluj",
+    "button_getUser": "Zdobądź nowych użytkowników",
     "connectionInformation": "Podać informacje na temat podłączania do sieci Hue bridge",
     "connectionTitle": "Ustawienia połączenia Hue bridge",
+    "donateInformation": "Nie wahaj się zaproponować nowe funkcje poprzez GitHub lub forum ioBroker. Jeśli podoba ci się ten zasilacz, możesz podarować.",
+    "donateTitle": "Wsparcie rozwoju Hue-zaawansowany zasilacz!",
+    "getUserInfo": "Naciśnij przycisk na swoim Hue bridge pierwszy! Po tym, klikając na przycisk-dostaniesz nowy użytkownik.",
+    "hueToXY": "Używamy XY zamiast Hue (tylko dla urządzeń Philips)",
+    "hueToXYInfo": "Przy ustalaniu stanu odcień, nie Philips urządzenia mogą nie proces ten, choć zespół z powodzeniem stosuje. Dzięki tej opcji, zasilacz zawsze wyślemy państwowej odcień jak zespół XY, aby nie Philips urządzenia.",
     "ip": "IP mostu",
+    "message_connected": "Podłączony do zasilacza. Usuwanie użytkowników..",
+    "message_connecting": "Podłączenie do zasilacza..",
+    "message_error-user": "Nie może przynieść użytkownikowi od mostu!",
+    "message_noconnection": "Nie ma związku z adapterem! Proszę, zacznij od zasilacza.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
     "nameInfo": "Używać nazwy urządzenia w drzewie obiektów (a nie ID)",
     "other": "Inne Opcje",
     "port": "Most Port",
+    "queue": "Przetwarzanie kolejki (w sekundach)",
+    "queueInfo": "Czas na przetwarzanie poleceń w kolejce. Polecenia są umieszczane w kolejce i przetwarzane razem. To pozwala na stosowanie polecenia сервал raz (a nie jeden) na swoich urządzeniach.",
     "refresh": "Aktualizacje (w sekundach)",
     "refreshInfo": "Podczas aktualizacji wszystkie ustawienia / informacje (w sekundach). Jeżeli określono wartość 0, ustawienia zostaną zaktualizowane po uruchomieniu.",
     "syncConfig": "Synchronizować Konfigur",
@@ -22,6 +35,7 @@
     "syncSensors": "Synchronizować Czujniki",
     "tab_alexa": "Alexa integracji",
     "tab_config": "Konfiguracji",
+    "tab_donate": "Darowizna",
     "tab_info": "Informacje",
     "useNames": "Używać Nazwy Urządzenia ",
     "user": "Użytkownik Przednia "
