--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,14 +1,27 @@
 {
     "buttonDismiss": "Fechar",
     "buttonNotAgain": "Não mostrar novamente",
+    "button_closeModal": "Cancelar",
+    "button_getUser": "Obter novo usuário",
     "connectionInformation": "Forneça informações de conexão para o seu Tonalidade Ponte",
     "connectionTitle": "Configurações de conexão de Tonalidade Ponte",
+    "donateInformation": "Sinta-se livre para sugerir novos recursos via Github ou ioBroker fórum. Se você gosta deste adaptador, você é muito bem-vindo para doar.",
+    "donateTitle": "Apoiar o desenvolvimento da tonalidade expandida do Adaptador!",
+    "getUserInfo": "Pressione o botão no seu Tonalidade Ponte de primeira! Depois, pressione o botão Obter novo usuário.",
+    "hueToXY": "Usar o gráfico de DISPERSÃO, em vez de matiz (somente para não-Philips dispositivos)",
+    "hueToXYInfo": "Quando a configuração de tonalidade do estado, não-Philips dispositivos podem falhar para este processo, mesmo que o comando foi aplicada com êxito. Com esta opção, o adaptador irá enviar sempre a tonalidade estado como xy comando para não-Philips dispositivos.",
     "ip": "Ponte IP",
+    "message_connected": "Conectado ao adaptador. Recuperar usuário..",
+    "message_connecting": "Ligar a placa..",
+    "message_error-user": "Pode não obter do usuário a partir da Ponte!",
+    "message_noconnection": "Não há ligação com o adaptador! Por favor, inicie o adaptador de primeira.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
     "nameInfo": "Usar o Nome de Dispositivo na árvore do Objeto (em vez do ID)",
     "other": "Outras Configurações",
     "port": "Ponte Do Porto",
+    "queue": "A fila de processamento (em segundos)",
+    "queueInfo": "O tempo para o processamento de comandos na fila. Os comandos são colocados em fila e processados em conjunto. Isto permite aplicar serval comandos de uma vez (e não de um em um) em todos os seus dispositivos.",
     "refresh": "Atualização (em segundos)",
     "refreshInfo": "Tempo para atualizar todas as configurações / informações (em segundos). Se definido como 0, as definições só serão atualizadas na inicialização.",
     "syncConfig": "Sincronizar Config",
@@ -22,6 +35,7 @@
     "syncSensors": "Sincronizar Sensores",
     "tab_alexa": "Alexa integração",
     "tab_config": "Configuração",
+    "tab_donate": "Doação",
     "tab_info": "Informações",
     "useNames": "Usar O Nome De Dispositivo",
     "user": "Ponte Do Usuário"
