--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -1,14 +1,27 @@
 {
     "buttonDismiss": "Уволить",
     "buttonNotAgain": "Больше не показывать ",
+    "button_closeModal": "Отменить",
+    "button_getUser": "Получите новых пользователей",
     "connectionInformation": "Предоставить информацию о подключении к вашей Hue мост",
     "connectionTitle": "Настройки подключения для Hue мост",
+    "donateInformation": "Не стесняйтесь предложить новые функции через GitHub или форуме ioBroker. Если вам нравится этот адаптер, вы можете пожертвовать.",
+    "donateTitle": "Поддержка развития Хюэ-расширенный адаптер!",
+    "getUserInfo": "Нажмите кнопку на вашем Hue мост первым! После этого, нажав на кнопку-получишь новый пользователь.",
+    "hueToXY": "Используем XY вместо Хюэ (только для не-устройств от Philips)",
+    "hueToXYInfo": "При установлении государственного оттенок, не Филипс устройства могут не процесс этот хоть и команда успешно применяется. С этой опцией, адаптер всегда вышлем государственной оттенок как команда XY, чтобы не Филипс устройства.",
     "ip": "IP-моста",
+    "message_connected": "Подключен к адаптеру. Извлечение пользователей..",
+    "message_connecting": "Подключение к адаптеру..",
+    "message_error-user": "Не может принести пользователю от моста!",
+    "message_noconnection": "Нет связи с адаптером! Пожалуйста, начните адаптера.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
     "nameInfo": "Использовать имя устройства в дереве объектов (а не ID)",
     "other": "Другие Параметры",
     "port": "Мост Порт",
+    "queue": "Обработка очереди (в секундах)",
+    "queueInfo": "Время на обработку команд в очереди. Команды помещаются в очередь и обрабатываются вместе. Это позволяет применять команды сервал сразу (и не по одному) на ваших устройствах.",
     "refresh": "Обновления (в секундах)",
     "refreshInfo": "Время обновления все настройки / информации (в секундах). Если задано значение 0, параметры будут обновляться при запуске.",
     "syncConfig": "Синхронизировать Конфиг",
@@ -22,6 +35,7 @@
     "syncSensors": "Синхронизировать Датчики",
     "tab_alexa": "Алекса интеграции",
     "tab_config": "Конфигурации",
+    "tab_donate": "Пожертвование",
     "tab_info": "Информация",
     "useNames": "Использовать Имя Устройства ",
     "user": "Пользователь Мост "
