--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -1,14 +1,27 @@
 {
     "buttonDismiss": "驳回",
     "buttonNotAgain": "不要再显示",
+    "button_closeModal": "取消",
+    "button_getUser": "获得新的用户",
     "connectionInformation": "提供连接信息顺桥",
     "connectionTitle": "连接设置顺桥",
+    "donateInformation": "随时提出新的功能，通过审查或ioBroker论坛。 如果你喜欢这个转接器，你非常受欢迎的捐赠。",
+    "donateTitle": "支持发展的顺化扩展适配器!",
+    "getUserInfo": "按下按钮你顺桥第一！ 后来，按下按钮-获得新的用户.",
+    "hueToXY": "使用x-y而不是色调(仅适用于非飞利浦的设备)",
+    "hueToXYInfo": "设定时的顺国家、非飞利浦设备可能无法处理此，即使该命令已成功应用。 与此选项，适配器将总是发送的色调国家作为xy命令以非飞利浦设备。",
     "ip": "桥的IP",
+    "message_connected": "连接器。 检索的用户..",
+    "message_connecting": "连接到适配器..",
+    "message_error-user": "不能取用户从桥！",
+    "message_noconnection": "没有连接到适配器! 请启动器的第一个。",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
     "nameInfo": "使用的设备名称中的目标树(而不是ID)",
     "other": "其他的设置",
     "port": "桥口",
+    "queue": "的队列中处理(秒)",
+    "queueInfo": "处理时间命令在队列中。 命令是排队，并处理在一起。 这将允许申请薮命令，一旦(而不是逐一)在您的设备。",
     "refresh": "刷新(秒)",
     "refreshInfo": "时间用于清爽的所有设置/信息(秒)。 如果设定为0、设置将只能刷新启动。",
     "syncConfig": "同步配置",
@@ -22,6 +35,7 @@
     "syncSensors": "同步传感器",
     "tab_alexa": "Alexa的一体化",
     "tab_config": "配置",
+    "tab_donate": "捐赠",
     "tab_info": "的信息",
     "useNames": "使用的设备名称",
     "user": "桥户"
