--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -1,14 +1,27 @@
 {
     "buttonDismiss": "Dismiss",
     "buttonNotAgain": "Don't show again",
+    "button_closeModal": "Cancel",
+    "button_getUser": "Get new user",
     "connectionInformation": "Provide connection information for your Hue Bridge",
     "connectionTitle": "Connection settings for Hue Bridge",
+    "donateInformation": "Feel free to suggest new features via Github or ioBroker forum. If you like this adapter, you very welcome to donate.",
+    "donateTitle": "Support the development of the hue-extended Adapter!",
+    "getUserInfo": "Press the button on your Hue Bridge first! Afterwards, press the button -Get new user-.",
+    "hueToXY": "Use <pre>XY</pre> instead of <pre>hue</pre> (only for non-Philips devices)",
+    "hueToXYInfo": "When setting the <pre>hue</pre> state, non-Philips devices may fail to process this even though the command has successfully been applied. With this option, the adapter will always send the <pre>hue</pre> state as <pre>XY</pre> command to non-Philips devices.",
     "ip": "Bridge IP",
+    "message_connected": "Connected to adapter. Retrieving user..",
+    "message_connecting": "Connecting to adapter..",
+    "message_error-user": "Could not fetch user from Bridge!",
+    "message_noconnection": "No connection to adapter! Please start adapter first.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
     "nameInfo": "Use Device Name in Object tree (instead of ID)",
     "other": "Other Settings",
     "port": "Bridge Port",
+    "queue": "Queue processing (in seconds)",
+    "queueInfo": "Time for processing commands in the queue (in seconds). Commands are queued and processed together. This allows to apply several commands at once (and not one-by-one) on your devices.",
     "refresh": "Refresh (in seconds)",
     "refreshInfo": "Time for refreshing all settings / information (in seconds). If set to 0, settings will only be refreshed on startup.",
     "syncConfig": "Synchronize Config",
@@ -22,6 +35,7 @@
     "syncSensors": "Synchronize Sensors",
     "tab_alexa": "Alexa integration",
     "tab_config": "Configuration",
+    "tab_donate": "Donation",
     "tab_info": "Information",
     "useNames": "Use Device Name",
     "user": "Bridge User"
