--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -17,6 +17,9 @@
     "message_noconnection": "Keine Verbindung zum Adapter! Bitte zunächst den Adapter starten.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
+    "nameIdAppend": "Geräte-ID anstellen",
+    "nameIdInfo": "Die Geräte-ID ist notwendig, um innerhalb des Objekt-Baums ein Gerät eindeutig identifizieren zu können (im Falle redundanter Namen). Diese Option legt fest, ob die Geräte-ID vor oder nach dem Namen des Gerätes erscheint.",
+    "nameIdPrepend": "Geräte-ID voranstellen",
     "nameInfo": "Geräte-Namen im Objekt-Baum (anstelle der ID) verwenden",
     "other": "Weitere Einstellungen",
     "port": "Bridge Port",
