--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -17,6 +17,9 @@
     "message_noconnection": "No connection to adapter! Please start adapter first.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
+    "nameIdAppend": "Append ID to Device Name",
+    "nameIdInfo": "The device ID is necessary within the object tree to uniquely identify a device (in case names are redundand). This option defines whether to put the ID before or after the device name.",
+    "nameIdPrepend": "Prepend ID to Device Name",
     "nameInfo": "Use Device Name in Object tree (instead of ID)",
     "other": "Other Settings",
     "port": "Bridge Port",
