--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -17,6 +17,9 @@
     "message_noconnection": "No hay conexión con el adaptador! Por favor, inicie adaptador primero.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
+    "nameIdAppend": "Anexar IDENTIFICACIÓN a Nombre de Dispositivo",
+    "nameIdInfo": "El ID de dispositivo es necesaria en el árbol de objetos para identificar un dispositivo (en caso de que los nombres son redundand). Esta opción define si se debe colocar el ID antes o después del nombre del dispositivo.",
+    "nameIdPrepend": "Anteponer ID a Nombre de Dispositivo",
     "nameInfo": "El uso de un Nombre de Dispositivo en el árbol de Objetos (en lugar de ID)",
     "other": "Otros Ajustes",
     "port": "Puente Del Puerto",
