--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -17,6 +17,9 @@
     "message_noconnection": "Pas de connexion à la carte! S'il vous plaît commencer adaptateur.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
+    "nameIdAppend": "Ajouter l'ID de Périphérique Nom",
+    "nameIdInfo": "L'ID de l'appareil est nécessaire au sein de l'arborescence de l'objet à identifier de manière unique un périphérique (dans le cas où les noms sont redundand). Cette option définit s'il faut mettre l'ID de l'avant ou après le nom de l'appareil.",
+    "nameIdPrepend": "Ajouter l'ID de Périphérique Nom",
     "nameInfo": "Utilisation Nom de l'Appareil dans l'arborescence des Objets (au lieu de l'ID)",
     "other": "D'Autres Paramètres",
     "port": "Port De Pont",
