--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -17,6 +17,9 @@
     "message_noconnection": "Nessun collegamento alla scheda! Si prega di avviare prima l'adattatore.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
+    "nameIdAppend": "Aggiungere l'ID del Dispositivo Nome",
+    "nameIdInfo": "L'ID del dispositivo è necessario all'interno della struttura ad albero di oggetti per identificare univocamente un dispositivo (nel caso in cui i nomi sono redundand). Questa opzione definisce se mettere l'ID prima o dopo il nome del dispositivo.",
+    "nameIdPrepend": "Anteporre ID, Nome del Dispositivo",
     "nameInfo": "Utilizzare il Nome del Dispositivo in Oggetto albero (invece di ID)",
     "other": "Altre Impostazioni",
     "port": "Ponte Di Porta",
