--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -17,6 +17,9 @@
     "message_noconnection": "Geen verbinding met adapter! Start de adapter eerste.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
+    "nameIdAppend": "Voeg ID naar de Naam van het Apparaat",
+    "nameIdInfo": "De apparaat-ID die nodig zijn binnen het object boom ter identificatie van een apparaat (in het geval namen zijn redundand). Met deze optie definieert u of u de ID voor of na de naam van het apparaat.",
+    "nameIdPrepend": "Voeg ID naar de Naam van het Apparaat",
     "nameInfo": "Gebruik de Naam van het Apparaat in het objectscherm (in plaats van ID)",
     "other": "Andere Instellingen",
     "port": "Brug-Poort",
