--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -17,6 +17,9 @@
     "message_noconnection": "Nie ma związku z adapterem! Proszę, zacznij od zasilacza.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
+    "nameIdAppend": "Dodaj ID do nazwy urządzenia",
+    "nameIdInfo": "Identyfikator urządzenia należy w drzewie obiektów w celu jednoznacznej identyfikacji urządzenia (w przypadku, gdy nazwy redundand). Ten parametr określa, czy należy umieścić kod przed lub po nazwie urządzenia.",
+    "nameIdPrepend": "Dodaj ID do nazwy urządzenia ",
     "nameInfo": "Używać nazwy urządzenia w drzewie obiektów (a nie ID)",
     "other": "Inne Opcje",
     "port": "Most Port",
