--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -17,6 +17,9 @@
     "message_noconnection": "Não há ligação com o adaptador! Por favor, inicie o adaptador de primeira.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
+    "nameIdAppend": "Acrescentar o ID do Dispositivo, o Nome do",
+    "nameIdInfo": "O ID do dispositivo é necessário dentro da árvore de objectos para identificar exclusivamente um dispositivo (no caso de nomes são redundand). Esta opção define se pretende colocar o ID, antes ou depois do nome do dispositivo.",
+    "nameIdPrepend": "Adicione o prefixo de IDENTIFICAÇÃO do Dispositivo, o Nome do",
     "nameInfo": "Usar o Nome de Dispositivo na árvore do Objeto (em vez do ID)",
     "other": "Outras Configurações",
     "port": "Ponte Do Porto",
