--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -17,6 +17,9 @@
     "message_noconnection": "Нет связи с адаптером! Пожалуйста, начните адаптера.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
+    "nameIdAppend": "Добавление ID к имени устройства",
+    "nameIdInfo": "Идентификатор устройства необходимо в дереве объектов для уникальной идентификации устройства (в случае, если имена redundand). Этот параметр определяет, следует ли поставить код перед или после имени устройства.",
+    "nameIdPrepend": "Добавить ID к имени устройства ",
     "nameInfo": "Использовать имя устройства в дереве объектов (а не ID)",
     "other": "Другие Параметры",
     "port": "Мост Порт",
