--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -17,6 +17,9 @@
     "message_noconnection": "没有连接到适配器! 请启动器的第一个。",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
+    "nameIdAppend": "追加ID设备名称",
+    "nameIdInfo": "设备ID是必要的内对象树唯一识别设备(在情况下，名称是redundand). 这项定义是否把ID之前或之后的设备名称。",
+    "nameIdPrepend": "Prepend ID设备名称",
     "nameInfo": "使用的设备名称中的目标树(而不是ID)",
     "other": "其他的设置",
     "port": "桥口",
