--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -31,6 +31,7 @@
     "syncGroups": "Synchroniser Les Groupes",
     "syncInfo": "Sélectionnez les éléments à synchroniser",
     "syncLights": "Synchroniser Les Feux De",
+    "syncRecycled": "Synchroniser supprimé / articles recyclés",
     "syncResources": "La Synchronisation Des Ressources",
     "syncRules": "Synchroniser Les Règles",
     "syncScenes": "Synchroniser Les Scènes",
