--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -31,6 +31,7 @@
     "syncGroups": "Sincronizzare I Gruppi",
     "syncInfo": "Selezionare gli elementi per essere sincronizzati",
     "syncLights": "Sincronizzare Le Luci",
+    "syncRecycled": "Sincronizzare cancellati / oggetti riciclati",
     "syncResources": "Sincronizzare Le Risorse",
     "syncRules": "Sincronizzare Le Regole",
     "syncScenes": "Sincronizzare Le Scene",
