--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -31,6 +31,7 @@
     "syncGroups": "Synchronizacja Grup",
     "syncInfo": "Wybierz elementy do synchronizacji",
     "syncLights": "Zsynchronizować Światła",
+    "syncRecycled": "Synchronizacja pulpitu / recyklingu elementów",
     "syncResources": "Synchronizacja Zasobów",
     "syncRules": "Zasady Synchronizacji ",
     "syncScenes": "Synchronizować Sceny",
