--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -31,6 +31,7 @@
     "syncGroups": "Синхронизация Групп",
     "syncInfo": "Выберите элементы для синхронизации",
     "syncLights": "Синхронизировать Света",
+    "syncRecycled": "Синхронизация удаленных / переработанных элементов",
     "syncResources": "Синхронизация Ресурсов",
     "syncRules": "Правила Синхронизации ",
     "syncScenes": "Синхронизировать Сцены",
