--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -31,6 +31,7 @@
     "syncGroups": "同步组",
     "syncInfo": "选择项目，要同步",
     "syncLights": "同步灯",
+    "syncRecycled": "同删除/再循环项目",
     "syncResources": "同步的资源",
     "syncRules": "同的规则",
     "syncScenes": "同步的场景",
