--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -31,6 +31,7 @@
     "syncGroups": "Sincronizar Grupos",
     "syncInfo": "Seleccione los elementos para ser sincronizado",
     "syncLights": "Sincronizar Las Luces",
+    "syncRecycled": "Sincronizar borrados / artículos reciclados",
     "syncResources": "Sincronizar Los Recursos",
     "syncRules": "Sincronizar Las Reglas",
     "syncScenes": "Sincronizar Escenas",
