--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -31,6 +31,7 @@
     "syncGroups": "Groepen Synchroniseren",
     "syncInfo": "Selecteer de items die moeten worden gesynchroniseerd",
     "syncLights": "Het Synchroniseren Van Verkeerslichten",
+    "syncRecycled": "Synchroniseren verwijderd / gerecycled items",
     "syncResources": "Bronnen Synchroniseren",
     "syncRules": "Synchroniseren Regels",
     "syncScenes": "Synchroniseren Schermen",
