--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -31,6 +31,7 @@
     "syncGroups": "Sincronizar Grupos",
     "syncInfo": "Selecione os itens a serem sincronizados",
     "syncLights": "Sincronizar Luzes",
+    "syncRecycled": "Sincronizar excluídos / reciclado itens",
     "syncResources": "Sincronizar Recursos",
     "syncRules": "Sincronizar Regras",
     "syncScenes": "Sincronizar Cenas",
