--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -42,5 +42,6 @@
     "tab_donate": "Spenden",
     "tab_info": "Informationen",
     "useNames": "Geräte-Namen verwenden",
+    "useQueue": "Benutze Warteschlange",
     "user": "Bridge Benutzer"
 }
