--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -42,5 +42,6 @@
     "tab_donate": "Donation",
     "tab_info": "Information",
     "useNames": "Use Device Name",
+    "useQueue": "Use Queue",
     "user": "Bridge User"
 }
