--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -42,5 +42,6 @@
     "tab_donate": "Donación",
     "tab_info": "Información",
     "useNames": "El Uso De Un Nombre De Dispositivo",
+    "useQueue": "El Uso De La Cola De",
     "user": "Puente De Usuario"
 }
