--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -42,5 +42,6 @@
     "tab_donate": "Don",
     "tab_info": "Informations",
     "useNames": "Utilisation Nom De L'Appareil",
+    "useQueue": "L'Utilisation De La File D'Attente",
     "user": "Pont De L'Utilisateur"
 }
