--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -42,5 +42,6 @@
     "tab_donate": "Donazione",
     "tab_info": "Informazioni",
     "useNames": "Utilizzare Il Nome Del Dispositivo",
+    "useQueue": "Utilizzare La Coda",
     "user": "Ponte Utente"
 }
