--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -42,5 +42,6 @@
     "tab_donate": "Donatie",
     "tab_info": "Informatie",
     "useNames": "Gebruik De Naam Van Het Apparaat",
+    "useQueue": "Gebruik Wachtrij",
     "user": "Brug Gebruiker"
 }
