--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -42,5 +42,6 @@
     "tab_donate": "Darowizna",
     "tab_info": "Informacje",
     "useNames": "Używać Nazwy Urządzenia ",
+    "useQueue": "Korzystanie Z Kolejki",
     "user": "Użytkownik Przednia "
 }
