--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -42,5 +42,6 @@
     "tab_donate": "Doação",
     "tab_info": "Informações",
     "useNames": "Usar O Nome De Dispositivo",
+    "useQueue": "Use Fila",
     "user": "Ponte Do Usuário"
 }
