--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -42,5 +42,6 @@
     "tab_donate": "Пожертвование",
     "tab_info": "Информация",
     "useNames": "Использовать Имя Устройства ",
+    "useQueue": "Использование Очереди",
     "user": "Пользователь Мост "
 }
